# x11idle

./: Cargo.toml  LICENSE  README.md  install.sh
assets/: config.toml  example.toml
src/: app.rs  cli.rs  config.rs  error.rs  events.rs  idle.rs  inhibit.rs  listeners.rs  logind.rs  main.rs  output.rs  screensaver.rs
src/x11/: clock.rs  input.rs  mod.rs
